--- a/No-boots/Cargo.toml
+++ b/No-boots/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.1"
 edition = "2024"
 
 [dependencies]
-tfhe = { version = "~1.3.3", features = ["boolean"] }
+tfhe = { version = "*", features = ["boolean", "shortint"] }
