--- a/PulpFHE-rs/Cargo.toml
+++ b/PulpFHE-rs/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tfhe = { version = "*", features = ["boolean", "shortint"] }
+tfhe = { version = "1.3.3", features = ["boolean", "shortint"] }
