--- a/PulpFHE-rs/Cargo.toml
+++ b/PulpFHE-rs/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 
 [dependencies]
 tfhe = { version = "1.3.3", features = ["boolean", "shortint"] }
+
+[dev-dependencies]
+serial_test = "*"
